--- a/.gitignore
+++ b/.gitignore
@@ -130,3 +130,5 @@ iOSInjectionProject/
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.gitignore.io/api/xcode,macos,swift
+
+.build
