--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,8 +17,10 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    - name: Install Bundler
+      run: sudo gem install bundler
     - name: Update Bundler
-      run: sudo bundle install
+      run: bundle install
     - name: Notarize
       run: bundle exec fastlane release
       
