add missing env

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -32,6 +32,7 @@ jobs:
         GIT_EMAIL: ${{ secrets.FASTLANE_CODE_SIGN_REPO_USER }}
         APPLE_ID: ${{ secrets.APPLE_ID }} 
         FL_NOTARIZE_PASSWORD : ${{ secrets.APPLE_ACCESS_TOKEN }}
+        FASTLANE_PASSWORD: ${{ secrets.APPLE_ACCESS_TOKEN }}
         TEAM_NAME: ${{ secrets.TEAM_NAME }} 
         TEAM_ID: ${{ secrets.TEAM_ID }}
         KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }} 
