--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.build
+.env
 
 # Created by https://www.gitignore.io/api/xcode,macos,swift
 # Edit at https://www.gitignore.io/?templates=xcode,macos,swift
@@ -130,5 +132,3 @@ iOSInjectionProject/
 **/xcshareddata/WorkspaceSettings.xcsettings
 
 # End of https://www.gitignore.io/api/xcode,macos,swift
-
-.build
