--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -70,7 +70,7 @@ jobs:
         sparkle_length=`awk '{ print $1 }' ~/sparkle_length`
         build_number=`plutil -extract CFBundleVersion xml1 -o - mimiq/Info.plist | sed -n "s/.*<string>\(.*\)<\/string>.*/\1/p"`
         version=`plutil -extract CFBundleShortVersionString xml1 -o - mimiq/Info.plist | sed -n "s/.*<string>\(.*\)<\/string>.*/\1/p"`
-        major=`fastlane//semver get major $version`
+        major=`fastlane/semver get major $version`
         minor=`fastlane/semver get minor $version`
         revision=`fastlane/semver get patch $version`
         installer_link="https://github.com/wendyliga/mimiq-gui/releases/download/${version}/mimiq.zip"
